Changed mobile nav selectors align & fixed auth modals input width on small screens

--- a/src/app/components/modals/global.scss
+++ b/src/app/components/modals/global.scss
@@ -84,6 +84,9 @@ input, button {
 input {
 	height: 26px;
 	width: 384px - 34px;
+	@media (max-width: 430px) {
+		width: calc(100vw - 80px);
+	}
 }
 
 button {
