--- a/src/app/components/modals/mobile-nav/mobile-nav.component.scss
+++ b/src/app/components/modals/mobile-nav/mobile-nav.component.scss
@@ -33,6 +33,7 @@
 	width: 100%;
 	gap: 32px;
 	padding-top: 48px;
+	align-items: flex-start;
 	a {
 		color: #000B26E0;
 		font-size: 18px;
